# pysupladevice

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
pysupladevice/: channels.py  device.py  network.py  proto.py
tests/: channel_test.py  device_test.py  test_channel.py  test_device.py
