[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pysupladevice"
dynamic = ["version"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pre-commit",
    "pylint",
    "pylint-pytest",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.isort]
profile = "black"

[tool.pylint.main]
load-plugins = [
    "pylint.extensions.typing",
    "pylint_pytest",
]

[tool.pylint."messages control"]
disable = [
    "missing-docstring",
]

[tool.pylint.reports]
reports = "no"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true
